# Home-Value-Predictions

./: Makefile  README.md  pyproject.toml  requirements.txt
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: 01 - RC - complete-analysis.ipynb  Final Project - Home Value Predictions.ipynb
reports/: 01 - RC - complete-analysis.html
